--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "restaurant-list",
   "version": "1.0.0",
-  "description": "",
+  "description": "此專案是可以查詢查詢餐廳資訊、評價、地址等等，且依照餐廳名稱與類別進行搜尋，詳細功能請參考如下。",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +14,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sharon-chen123/restaurant--list.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sharon-chen123/restaurant--list/issues"
+  },
+  "homepage": "https://github.com/Sharon-chen123/restaurant--list#readme"
 }
